<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_install"
        android:checkable="true"
        android:icon="@drawable/ic_nav_install"
        android:title="@string/nav_install" />
    <item
        android:id="@+id/nav_resource_panel"
        android:checkable="true"
        android:icon="@drawable/ic_nav_resource_panel"
        android:title="@string/nav_resource_panel" />
    <item
        android:id="@+id/nav_help"
        android:checkable="true"
        android:icon="@drawable/ic_nav_help"
        android:title="@string/nav_help" />
    <item
        android:id="@+id/nav_settings"
        android:checkable="true"
        android:icon="@drawable/ic_nav_settings"
        android:title="@string/nav_settings" />
</menu>
